--- a/style/breakpoints.css
+++ b/style/breakpoints.css
@@ -102,23 +102,20 @@
     }
 
     .line-1 {
-        display: none !important;
+        display: none !important; 
     }
     
     .background {
         padding: 0 !important;
     }
 
-    .location-wrap {
-        display: flex !important;
-        flex-direction: column !important;
-        align-items: center !important;
-        row-gap: 30px !important;
-    }
-
     .location-boxxer {
         margin-right: 0 !important;
         margin: 30px 0;
+    }
+
+    .location-wrap {
+        padding: 20px !important;
     }
 
     .provide-wrap {
@@ -151,6 +148,14 @@
     .provide-text {
         font-size: 15px !important;
     }
+
+    .provide-text-wrap {
+        display: flex !important;
+        flex-wrap: wrap !important;
+        column-gap: 20px !important;
+        flex-direction: initial !important;
+        justify-content: center;
+    }
         
     
 
@@ -164,6 +169,9 @@
 @media (max-width: 767px) {
     .easy-right img {
         width: 100% !important;
+    }
+    .location-img {
+        margin-right: 15px !important;
     }
 }
 
@@ -216,6 +224,17 @@
 
     .easy-span {
         font-size: 35px !important;
+    }
+
+    .location-wrap {
+        display: flex !important;
+        flex-direction: column !important;
+        padding: 20px 50px !important;
+
+    }
+
+    .provide-text-wrap {
+        flex-direction: column !important;
     }
 }
 
