--- a/style/main.css
+++ b/style/main.css
@@ -290,6 +290,7 @@ button {
 
 .plan {
     margin-top: 150px;
+    margin-bottom: 150px;
 }
 
 .plan-title-wrap {
@@ -320,7 +321,7 @@ button {
 }
 
 .plan-wrap {
-    height: 100%;
+    /* height: 100%; */
     border: 2px solid #DDDDDD;
     border-radius: 10px;
     padding: 80px 69.87px 50px 69.87px ;
