--- a/style/breakpoints.css
+++ b/style/breakpoints.css
@@ -66,6 +66,10 @@
         display: none !important;
 
     }
+
+    .global-img img {
+        width: 100% !important;
+    }
 }
 
 
@@ -79,6 +83,10 @@
         height: 100%;
         background-color: #203253;
         right: -100%;
+    }
+
+    .trust-wrapper {
+        overflow-x: scroll !important;
     }
 
     .header-link {
@@ -165,6 +173,15 @@
         flex-direction: initial !important;
         justify-content: center;
     }
+
+    .subs-back {
+        padding: 58.5px 25px;
+    }
+
+    
+    .footer-wrapper {
+        column-gap: 30px;
+    }
         
     
 
@@ -182,6 +199,28 @@
     .location-img {
         margin-right: 15px !important;
     }
+
+    .subs-wrap {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .subs-title,
+    .subs-text {
+        text-align: center;
+    }
+
+    .subs-text {
+        margin-bottom: 30px;
+    }
+
+    .footer-wrapper {
+        flex-wrap: wrap;
+        row-gap: 30px;
+    }
+
+    
+
 }
 
 @media (max-width: 575px) {
@@ -244,6 +283,13 @@
 
     .provide-text-wrap {
         flex-direction: column !important;
+    }
+
+    .subs-title {
+        font-size: 30px !important;
+    }
+    .subs-btn {
+        font-size: 13px;
     }
 }
 
