--- a/style/main.css
+++ b/style/main.css
@@ -162,7 +162,7 @@ button {
     border: 0;
     padding: 17.5px 75.5px;
     border-radius: 10px;
-    box-shadow: 0px 52px 300px 17px red;
+    box-shadow: 0px 29px 67px 0px #F5383859;
 }
 
 
@@ -324,7 +324,7 @@ button {
     /* height: 100%; */
     border: 2px solid #DDDDDD;
     border-radius: 10px;
-    padding: 80px 69.87px 50px 69.87px ;
+    padding: 80px 69.87px 50px 69.87px;
 }
 
 .plan-wrap:hover {
@@ -352,8 +352,8 @@ button {
     row-gap: 10px;
     margin-top: 30px;
     margin-bottom: 130px;
-
 }
+
 .plan-text {
     color: var(--text-color);
     font-size: 14px;
@@ -397,5 +397,259 @@ button {
 .plan-btn:hover {
     background: #F53838;
     color: #FFFFFF;
+}
 
+/* GLOBAL */
+
+.global-title {
+    color: var(--title-color);
+    font-size: 35px;
+    font-weight: 500;
+    line-height: 50px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.global-text {
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+}
+
+.las-span {
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 30px;
+    text-align: center;
+}
+
+.global-img {
+    margin-top: 155.81px;
+    display: flex;
+    justify-content: center;
+}
+
+.global-img-wrap {
+    display: flex;
+    justify-content: center;
+    column-gap: 65px;
+}
+
+/* TRUST */
+
+.trust {
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
+
+.trust-main-title {
+    color: var(--title-color);
+    font-size: 35px;
+    font-weight: 500;
+    line-height: 50px;
+    text-align: center;
+}
+
+.trust-main-text {
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.trust-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 60px;
+}
+
+.trust-wrap {
+    border: 2px solid #DDDDDD;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.trust-wrap:hover {
+    border: 2px solid #F53838;
+}
+
+
+
+.trust-boxxer {
+    display: flex;
+    align-items: center;
+    margin-bottom: 26.5px;
+}
+
+.trust-img img {
+    margin-right: 20px;
+}
+
+.trust-title-box {
+    display: flex;
+    flex-direction: column;
+    margin-right: 108px;
+}
+
+.trust-title {
+    color: var(--title-color);
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 30px;
+}
+
+.trust-text {
+    color: var(--text-color);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.trust-rate {
+    color: var(--title-color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
+    display: flex;
+    align-items: center;
+}
+
+.trust-rate {
+    color: var(--title-color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.trust-big-text {
+    color: var(--title-color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
+    max-width: 340px;
+    width: 100%;
+}
+
+/* SUBS */
+
+.subs {
+    margin-bottom: 60px;
+}
+
+.subs-back {
+    background-color: #FFFFFF;
+    padding: 58.5px 70px;
+    border-radius: 10px;
+    box-shadow: #0D1025 0px 5px 34px;
+}
+
+.subs-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.subs-title {
+    color: var(--title-color);
+    font-size: 35px;
+    font-weight: 500;
+    line-height: 45px;
+    text-align: left;
+    max-width: 371.61px;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.subs-text {
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
+}
+
+.subs-btn {
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 25px;
+    text-align: left;
+    padding: 17.5px 65px;
+    background-color: #F53838;
+    border-radius: 10px;
+    border: 0;
+    box-shadow: 0px 29px 67px 0px #F5383859;
+    ;
+}
+
+/* FOOTER */
+
+.footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-text {
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
+    max-width: 340px;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.footer-span {
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 30px;
+    text-align: left;
+}
+
+.footer-gm {
+    color: #AFB5C0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-top: 30px;
+}
+
+.footer-span2 {
+    color: #AFB5C0;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 30px;
+}
+
+.footer-title {
+    color: var(--title-color);
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 30px;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.foooter-list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.footer-link {
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
 }
