--- a/style/main.css
+++ b/style/main.css
@@ -176,7 +176,7 @@ button {
     background-color: #FFFFFF;
     padding: 72px 50px;
     border-radius: 10px;
-    box-shadow: #0D1025 0px 5px 34px;
+    box-shadow: #c5c7cd 0px 5px 34px;
 }
 
 .location-wrap {
@@ -318,6 +318,7 @@ button {
 .plan-wrapper {
     display: flex;
     justify-content: space-between;
+    margin-top: 60px;
 }
 
 .plan-wrap {
@@ -325,6 +326,8 @@ button {
     border: 2px solid #DDDDDD;
     border-radius: 10px;
     padding: 80px 69.87px 50px 69.87px;
+    display: flex;
+    flex-direction: column;
 }
 
 .plan-wrap:hover {
@@ -378,6 +381,7 @@ button {
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+    margin-top: auto;
 }
 
 .plan-btn {
@@ -460,6 +464,7 @@ button {
     line-height: 30px;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 50px;
 }
 
 .trust-wrapper {
@@ -472,12 +477,16 @@ button {
     border: 2px solid #DDDDDD;
     border-radius: 10px;
     padding: 20px;
+    min-height: 250px;
 }
 
 .trust-wrap:hover {
     border: 2px solid #F53838;
 }
 
+.trust-rates {
+    margin-left: auto;
+}
 
 
 .trust-boxxer {
@@ -493,7 +502,6 @@ button {
 .trust-title-box {
     display: flex;
     flex-direction: column;
-    margin-right: 108px;
 }
 
 .trust-title {
@@ -537,6 +545,37 @@ button {
     width: 100%;
 }
 
+
+.trust .swiper-button-next::after,
+.trust .swiper-button-prev::after {
+    content: '';
+}
+
+
+.trust .swiper-button-next i,
+.trust .swiper-button-prev i {
+    font-size: 25px;
+    color: white;
+    border-radius: 50%;
+    padding: 15px;
+    border: 2px solid #F53838;
+    background: #F53838;
+    transition: .5s;
+}
+
+.trust .swiper-button-disabled i {
+    background: white !important;
+    color: #F53838;
+}
+
+.trust .swiper-pagination-bullet-active {
+    width: 45px;
+    border-radius: 10px;
+    background: #F53838;
+
+}
+
+
 /* SUBS */
 
 .subs {
@@ -548,6 +587,8 @@ button {
     padding: 58.5px 70px;
     border-radius: 10px;
     box-shadow: #0D1025 0px 5px 34px;
+    position: relative;
+    top: 200px;
 }
 
 .subs-wrap {
@@ -590,6 +631,12 @@ button {
 }
 
 /* FOOTER */
+
+footer {
+    background: #F8F8F8;
+    padding: 180px 0 100px 0;
+
+}
 
 .footer-wrapper {
     display: flex;
